syntax = "proto3";

package example;

import "access/v1/access.proto";

option go_package = "github.com/kostyay/protoc-gen-go-access-modifiers/example;example";


service ExampleService {
  rpc PrivateHello (PrivateHelloRequest) returns (PrivateHelloResponse) {
    option (access.v1.mo).private = true;
  }

  rpc PublicHello (PublicHelloRequest) returns (PublicHelloResponse);
}

message PublicHelloRequest {
}

message PublicHelloResponse {
  string name = 1;
}

message PrivateHelloRequest {
  string password = 1;
}

message PrivateHelloResponse {
  string name = 1;
}

message PrivateMessage {
  string password = 1;
}

message PartialPrivateMessage {
  string password = 1 [(access.v1.fo).private = true];
  string public_string = 2;
}

message Hello {
  string name = 1;
  string private_string = 2 [(access.v1.fo).private = true];
  int32 private_int = 3 [(access.v1.fo).private = true];
  PrivateMessage private_message = 4 [(access.v1.fo).private = true];
  PartialPrivateMessage partial_private_message = 5;
}